--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@capacitor/cli": "^6.2.0",
+    "@capacitor/core": "^6.2.0",
     "bootstrap": "^5.3.3",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
